--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div  class="section rotterdam">
         <img src="images/Rotterdam.jpg" width="100%" height="100%">
-        <p class="footnote">Rotterdam, 2021</p>
+        <p class="footnote">Rotterdam, 2024</p>
     </div>
 
 <!------------------------------ PORTFOLIO PDFS ------------------------->
@@ -59,8 +59,8 @@
         <h1>⤷ Camilo García Aycardi</h1>
         <ul>
             Currently Working on: 
-            <li>Design and co-production of Zine Camp Festival 2023 with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
-            <li>Ongoing publishing collaboration with Maria Paris in <a href="https://www.attempt.press/" target="_blank">attempt.</a></li>     
+            <li>Ongoing collaboration with <a href="https://www.hva.nl/kc-fdmci/gedeelde-content/lectoraten/lectoraat-creative-media-for-social-change/creative-media-for-social-change.html" target="_blank">Creative Media for Social Change</a> in Amsterdam, thinking, designing, publishing.</li>
+            <li>Ongoing publishing practice with Maria Paris in <a href="https://www.attempt.press/" target="_blank">attempt.</a></li>     
         </ul>
         <br>
         <h1>⤷ Contact</h1>
@@ -76,8 +76,9 @@
         <br>
         <h1>⤷ Recent Selected Work</h1>
         <ul> 
+            <li>2023 | Publication layout for the publication De kunst van het wetenschappelijk by Creative Media for Social Change. Amsterdam, NL. </a> 
             <li>2023 | Visual Design and co-production of <a href="https://zinecamp2023.hotglue.me/" target="_blank">Zine Camp Festival.</a> with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
-            <li>2023 | Publication design and illustration for the publication "Wi Dey Try" by Esther Kamara. Creative Media for Social Change. Amsterdam, NL. </a> 
+            <li>2023 | Publication design and illustration for the publication <a href="https://research.hva.nl/en/publications/we-de-try-creative-methods-of-storylistening-and-storytelling" target="_blank">We Dey Try</a> by Esther Kamara. Creative Media for Social Change. Amsterdam, NL. </a> 
             <li>2023 | Graphic Design and print-production of the publication "De kunst van het Wetenschappelijk verhaal". Creative Media for Social Change. Amsterdam, NL. </a> 
             <li>2023 | Co-design and co-production of <a href="https://digestingcare.eu">Digesting Care</a> the Taking care publication with Kendal Beynon for <a href="https://takingcareproject.eu/article/taking-care-re-creating-kinship-in-the-ethnographic-museum-in-europe-conference" target="_blank">Museum Volkenkunde.</a>  
             <li>2023 | Zine Workshop in collaboration with Kendal Beynon for <a href="https://newmetropolis.amsterdam/programma/the-trees-will-remain-finissage-zine-making-workshop" target="_blank">The Trees will Remain</a> exhibition. New Metropolis. Amsterdam, NL.</li>
