--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-    <div class="intro mobile"> ⤷ Hey, <br><br> Finally, I'm working on a mobile version of my website, no there yet tho, <br><br> Camilo 👀</div>
+    <div class="intro mobile"> ⤷ Hey, <br><br> Still (and I don't know until when because I'm going to change the whole structure of the website) I'm working on a mobile version of my website, no there yet tho, <br><br> Camilo 👀</div>
 
     <div class="section bogota">
         <img src="images/Bogota.jpg" width="100%" height="100%">
@@ -59,7 +59,7 @@
         <h1>⤷ Camilo García Aycardi</h1>
         <ul>
             Currently Working on: 
-            <li>Ongoing collaboration with <a href="https://www.hva.nl/kc-fdmci/gedeelde-content/lectoraten/lectoraat-creative-media-for-social-change/creative-media-for-social-change.html" target="_blank">Creative Media for Social Change</a> in Amsterdam, thinking, designing, publishing.</li>
+            <li>Ongoing collaboration with <a href="https://www.hva.nl/kc-fdmci/gedeelde-content/lectoraten/lectoraat-creative-media-for-social-change/creative-media-for-social-change.html" target="_blank">Creative Media for Social Change</a> in Amsterdam.</li>
             <li>Ongoing publishing practice with Maria Paris in <a href="https://www.attempt.press/" target="_blank">attempt.</a></li>     
         </ul>
         <br>
@@ -108,7 +108,7 @@
         </ul>
         <h1>⤷ Education</h1>
         <ul>
-            <li>Cum Laude | Master’s degree in Fine Art and Design: <a href="https://xpub.nl/" target="_blank">Experimental Publishing</a>, Piet Zwart Institute. Rotterdam, NL.</li>
+            <li>Master’s degree in Fine Art and Design: <a href="https://xpub.nl/" target="_blank">Experimental Publishing</a>, Piet Zwart Institute. Rotterdam, NL.</li>
             <li>Master’s degree in Production and Reasearch of art, University of Barcelona. Barcelona, SPN</li>   
             <li>Visual Arts, Javeriana University. Bogota, COL.</li>
             <li>2018 | Proofreader (Spanish) Level I, Javeriana University. Bogota, COL.</li>
@@ -125,7 +125,7 @@
             <li>2022 | Exhibitor |  <a href="https://grafcomic.com/" target="_blank">GRAF</a>. Barcelona, SPN.</li>
             <li>2021 | Co-production | <a href="https://zinecamp2021.hotglue.me/" target="_blank">ZineCamp</a>. Rotterdam, NL.</li>
             <li>2021 | Exhibitor | <a href="http://www.spreadzinefest.nl/" target="_blank">Spread Festival</a>. Groningen, NL.</li>
-            <li>2020 | Exhibitor | <a href="https://2020.recreoartbookfair.es/ target="_blank">Recreo</a>. Valencia, SPN </li>
+            <li>2020 | Exhibitor | <a href="https://2020.recreoartbookfair.es/" target="_blank">Recreo</a>. Valencia, SPN </li>
             <li>2019 | Exhibitor | <a href="https://www.p-a-g-e-s.ch/" target="_blank">P.A.G.E.S.</a>. Geneve, Switzerland.</li>
             <li>2019 | Exhibitor | <a href="https://www.facebook.com/notengomamafest/" target="_blank">No Tengo Mamá</a>. Vigo, Spain.</li>
             <li>2019 | Exhibitor | <a href="http://missread.com/" target="_blank">Missread</a>. Berlín, Germany.</li>
