--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <br>
         <h1>⤷ Recent Selected Work</h1>
         <ul> 
+            <li>2024 | Part of <a href="https://vitrine.declarations.style/">Declarations</a> worksessions. Brussels, BE.</a> 
             <li>2023 | Publication layout for the publication De kunst van het wetenschappelijk by Creative Media for Social Change. Amsterdam, NL. </a> 
             <li>2023 | Visual Design and co-production of <a href="https://zinecamp2023.hotglue.me/" target="_blank">Zine Camp Festival.</a> with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
             <li>2023 | Publication design and illustration for the publication <a href="https://research.hva.nl/en/publications/we-de-try-creative-methods-of-storylistening-and-storytelling" target="_blank">We Dey Try</a> by Esther Kamara. Creative Media for Social Change. Amsterdam, NL. </a> 
